# ultimate_rust2

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
example/cafeteria/: Cargo.toml
example/hello/: Cargo.toml
example/hello/src/: lib.rs
example/kitchen/: Cargo.toml
example/kitchen/src/: main.rs
example/puzzle_game/: Cargo.toml
example/puzzle_game/src/: main.rs
example/puzzles/: Cargo.toml
example/puzzles/src/: lib.rs
examples/cafeteria/src/: main.rs
examples/hello/benches/: snuggle_speed.rs
examples/hello/src/: lib.rs  main.rs
examples/hello/tests/: anything.rs
examples/puzzle_game/: Cargo.toml
examples/puzzles/src/: main.rs
exercise/closures_iterators/: Cargo.toml
exercise/closures_iterators/src/: main.rs
exercise/docs/: Cargo.toml
exercise/docs/src/: lib.rs  main.rs
exercise/errors/: Cargo.toml
exercise/errors/src/: lib.rs  main.rs
exercise/idiomatic/: Cargo.toml
exercise/idiomatic/src/: main.rs
exercise/logging/: Cargo.toml
exercise/logging/src/: lib.rs  main.rs
exercise/testing/: Cargo.toml
exercise/testing/benches/: sploosh_speed.rs
exercise/testing/src/: lib.rs
exercise/testing/tests/: more_tests.rs
exercise/threads_channels/: Cargo.toml
exercise/threads_channels/src/: main.rs
exercise/traits/: Cargo.toml
exercise/traits/src/: main.rs
