[workspace]
members = [
    "example/cafeteria",
    "example/hello",
    "example/kitchen",
    "example/puzzle_game",
    "example/puzzles",
    "exercise/idiomatic",
    "exercise/docs",
    "exercise/closures_iterators",
    "exercise/traits",
    "exercise/errors",
    "exercise/testing",
    "exercise/threads_channels",
    "exercise/logging",
]
