[package]
name = "frogger"
version = "0.1.0"
authors = [ "Nathan Stocks <nathan@agileperception.com>" ]
edition = "2018"

[dependencies]
# I'm glad you came to add the `log` dependency! I got it all ready for you, just uncomment:
#
log = "0.4"

# And here's the env_logger dependency that you'll need in main.rs
#
env_logger = "0.9"
